Perkin-UAT/force-app/main/default/objects/Account_Contract_Junction_Object__c/Account_Contract_Junction_Object__c.object-meta.xml
<CustomObject>
    <label>Account to Contract Relationship</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Account/Contract Junction Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account to Contract Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>