Perkin-UAT/force-app/main/default/objects/Account_Contract_Junction_Object__c/fields/Account_Formula_Test__c.field-meta.xml
<CustomField>
    <fullName>Account_Formula_Test__c</fullName>
    <formula>CASE( Account_Relationship__r.RecordTypeId ,
&#39;01230000000cPp0&#39;, &#39;PKI-Master&#39;,
&#39;012300000000YlK&#39;, &#39;Prospect Account&#39;,
&#39;SAP Account&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Record Type</label>
    <type>Text</type>
</CustomField>