Perkin-UAT/force-app/main/default/objects/Account_Contract_Junction_Object__c/fields/Contract_Relationship_1__c.field-meta.xml
<CustomField>
    <fullName>Contract_Relationship_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Number</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Account to Contract Relationships</relationshipLabel>
    <relationshipName>Account_Contract_Junction_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>