Perkin-UAT/force-app/main/default/objects/Account_Contract_Junction_Object__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>Contract_Relationship_1__r.End_Date__c</formula>
    <label>End Date</label>
    <type>Date</type>
</CustomField>