Perkin-UAT/force-app/main/default/objects/Account_Contract_Junction_Object__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <formula>Contract_Relationship_1__r.Start_Date__c</formula>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>